# metal-rendering-boilerplate

./: .clang-format  .gitmodules  Info.plist.in  LICENSE  README.md  TemplateRenderer.hpp  TemplateRenderer.mm  code_format.sh  dependencies.cmake  mrbp_config.hpp.in
app/: App.swift  AppDelegate.swift  AppDelegateIOS.swift  CMakeLists.txt  ContentView.swift  RendererViewRepresentable.swift  SceneDelegateIOS.swift
app/interface/mrbp/: Input.hpp  LaunchParams.hpp  MetalRenderer.hpp  Utils.hpp
app/renderer/: CMakeLists.txt  LaunchParams.h  LaunchParams.mm  RendererView.h  RendererView.mm  RendererViewDelegate.h  RendererViewDelegate.mm  renderer.h  renderer.modulemap
app/utils/: CMakeLists.txt  ResourceLoader.mm
